Fix grid overflow

--- a/src/assets/styles/components/base/_body.scss
+++ b/src/assets/styles/components/base/_body.scss
@@ -15,7 +15,10 @@
     &__grid {
         display: grid;
         grid-gap: 20px;
-        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+
+        @include media-query(s) {
+            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+        }
 
         > li {
             padding: 20px;
